fix meaning of context wellformedness

--- a/ctt.tex
+++ b/ctt.tex
@@ -100,8 +100,8 @@ $\Gamma$''). Their meaning explanations are as follows:
 
 \begin{quote}
   To know $\isctx\Gamma$\ is to know that $\reduce{\Gamma}{\cdot}$, or it is to know
-  a variable $x$ and an expression $A$ such that $\reduce{\Gamma}{\Gamma', \ver{x}{A}}$
-  and $\sequent{\Gamma'}{\isset{A}}$, and $\fresh{x}{\Gamma}$.
+  a variable $x$ and an expression $A$ such that $\reduce{\Gamma}{\Delta, \ver{x}{A}}$
+  and $\sequent{\Delta}{\isset{A}}$, and $\fresh{x}{\Delta}$.
 \end{quote}
 
 \begin{quote}
