--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -28,7 +28,7 @@ The meaning of the judgement \isprop{P} is, then, as follows:
 
 \begin{quote}
   To know \isprop{P} is to know that $P$ is a proposition, which is to know
-  what counts as a direct verification of $P$.
+  what would count as a direct verification of $P$.
 \end{quote}
 
 So if a symbol $P$ is taken to denote a proposition, we must know \emph{what
