--- a/logicaltheory.tex
+++ b/logicaltheory.tex
@@ -11,10 +11,11 @@ and (if they are evident) known.
 
 \section{Judgements of a logical theory}
 
-The basic forms of judgement for a logical theory will be \framebox{\isprop{P}} and
-\framebox{\istrue{P}}; and what is $P$? It is a member of the species of terms,
-which are made meaningful in the course of making the judgement
-$\isprop{P}$ evident for a proposition $P$.
+The basic forms of judgement for a logical theory will be
+\framebox{$\isprop{P}$} and \framebox{$\istrue{P}$}; and what is $P$?
+It is a member of the species of terms, which are made meaningful in
+the course of making the judgement $\isprop{P}$ evident for a
+proposition $P$.
 
 To each judgement is assigned a \emph{meaning explanation}, which explicates
 the knowledge-theoretic content of the judgement. For a judgement
@@ -24,10 +25,10 @@ $\mathcal{J}$, a meaning explanation should be in the form:
   To know $\mathcal{J}$ is to know...
 \end{quote}
 
-The meaning of the judgement \isprop{P} is, then, as follows:
+The meaning of the judgement $\isprop{P}$ is, then, as follows:
 
 \begin{quote}
-  To know \isprop{P} is to know that $P$ is a proposition, which is to know
+  To know $\isprop{P}$ is to know that $P$ is a proposition, which is to know
   what would count as a direct verification of $P$.
 \end{quote}
 
@@ -36,30 +37,31 @@ sort of thing} is to be taken as a direct verification of $P$, and this is
 understood as part of the definition of $P$. A ``direct verification'' is
 understood in constrast with an ``indirect verification'', which is to be
 thought of as a means or plan for verifying the proposition. Now, the judgement
-\istrue{P} is only meaningful in case we know \isprop{P} (this is called a
-presupposition). Then the meaning of \istrue{P} is as follows:
+$\istrue{P}$ is only meaningful in case we know $\isprop{P}$ (this is called a
+presupposition). Then the meaning of $\istrue{P}$ is as follows:
 
 \begin{quote}
-  To know \istrue{P} is to have a verification of $P$.
+  To know $\istrue{P}$ is to have a verification of $P$.
 \end{quote}
 
-From the (implicit) presupposition \isprop{P}, we already know what counts as a
-verification, so the meaning explanation is well-defined. Note that it is the
-same to have a means or plan for verifying $P$ as to have a (direct)
-verification; this follows from the fact that one may put into action a plan
-for verifying $P$ and achieve such a verification, and likewise, it is possible
-to propound a plan of verification by appeal to an existing verification.
+From the (implicit) presupposition $\isprop{P}$, we already know what
+counts as a verification, so the meaning explanation is
+well-defined. Note that it is the same to have a means or plan for
+verifying $P$ as to have a (direct) verification; this follows from
+the fact that one may put into action a plan for verifying $P$ and
+achieve such a verification, and likewise, it is possible to propound
+a plan of verification by appeal to an existing verification.
 
 \section{Higher-order judgements}
 
 The judgements we have described so far are ``categorical'' in the sense that
 they are made without assumption. We will need to define a further form of
 judgement, which is called ``hypothetical'', and this is the judgement under
-hypothesis \framebox{\hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}}.Its
+hypothesis \framebox{$\hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}$}.Its
 meaning explanation is as follows:
 
 \begin{quote}
-  To know the judgement \hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n} is to know the
+  To know the judgement $\hyp{\mathcal{J}}{\mathcal{J}_1,\dots,\mathcal{J}_n}$ is to know the
   categorical judgement $\mathcal{J}$ assuming you know the judgements
   $\mathcal{J}_1,\dots,\mathcal{J}_n$.
 \end{quote}
@@ -68,11 +70,11 @@ meaning explanation is as follows:
 
 Another kind of higher order judgement is ``general judgement'', which is
 judgement with respect to a collection of free variables,
-\framebox{\genj{\vec{x}}{\mathcal{J}}}. The meaning explanation for this new
+\framebox{$\genj{\vec{x}}{\mathcal{J}}$}. The meaning explanation for this new
 judgement is as follows:
 
 \begin{quote}
-  To know the judgement \genj{\vec{x}}{\mathcal{J}} is, for any arbitrary
+  To know the judgement $\genj{\vec{x}}{\mathcal{J}}$ is, for any arbitrary
   collection of expressions $\vec{E}$ of the same length of $\vec{x}$, to know
   $[\vec{E}/\vec{x}]\mathcal{J}$ (i.e. the substitution of each expression in
   $\vec{E}$ for each variable in $\vec{x}$ respectively).
@@ -84,10 +86,10 @@ tightly of all the other notations we have considered.
 \subsection{Hypothetico-general judgement}
 
 When hypothetical judgment is used inside general judgement, as in
-\genj{x}{\hyp{\istrue{A(x)}}{\istrue{B(x)}}}, we term the whole thing a
-``hypothetico-general'' judgement. One thing bears clarifying, which is, why do
-we write \hyp{\istrue{P}}{\istrue{P}} rather than
-\genj{P}{\hyp{\istrue{P}}{\istrue{P}}}?
+$\genj{x}{\hyp{\istrue{A(x)}}{\istrue{B(x)}}}$, we term the whole
+thing a ``hypothetico-general'' judgement. One thing bears clarifying,
+which is, why do we write $\hyp{\istrue{P}}{\istrue{P}}$ rather than
+$\genj{P}{\hyp{\istrue{P}}{\istrue{P}}}$?
 
 The former is properly not a single judgement, but rather a \emph{scheme} for
 judgements, where $P$ and $Q$ are intended to be replaced with concrete
@@ -97,16 +99,16 @@ latter is itself a single judgement which may be asserted all on its own.
 \section{Propositions and verifications}
 Now that we have propounded and explained the minimal system of judgements for
 a logical theory, let us populate it with propositions. First, we have falsity
-$\bot$, and we wish to make \isprop{\bot} evident; to do this, we simply state
+$\bot$, and we wish to make $\isprop{\bot}$ evident; to do this, we simply state
 what counts as a direct verification of $\bot$, which is that there is no
 direct verification of $\bot$.
 
-The next basic proposition is trivial truth $\top$, and to make \isprop{\top}
+The next basic proposition is trivial truth $\top$, and to make $\isprop{\top}$
 evident, we state that a direct verification of $\top$ is trivial. The definition
-of $\top$ thus validates the judgement \istrue{\top}.
+of $\top$ thus validates the judgement $\istrue{\top}$.
 
 Next, let us define conjunction; in doing so, we will make evident the
-hypothetical judgement \hyp{\isprop{P\land Q}}{\isprop{P},\isprop{Q}};
+hypothetical judgement $\hyp{\isprop{P\land Q}}{\isprop{P},\isprop{Q}}$;
 equivalently, we can display this as a rule of inference:
 \[
   \infer{
@@ -119,7 +121,7 @@ equivalently, we can display this as a rule of inference:
 
 A direct verification of $P\land Q$ consists in a verification of $P$
 and a verification of $Q$; this validates the assertion of the judgement
-\hyp{\istrue{P\land Q}}{\istrue{P},\istrue{Q}}. Because it is a valid
+$\hyp{\istrue{P\land Q}}{\istrue{P},\istrue{Q}}$. Because it is a valid
 inference, we can write it as an inference rule:
 \[
   \infer{
@@ -131,8 +133,8 @@ inference, we can write it as an inference rule:
 \]
 
 A direct verification of $P\lor Q$ may be got either from a verification
-of $P$ or one of $Q$. From this definition we know \hyp{\isprop{P\lor
-Q}}{\isprop{P},\isprop{Q}}, or
+of $P$ or one of $Q$. From this definition we know $\hyp{\isprop{P\lor
+Q}}{\isprop{P},\isprop{Q}}$, or
 \[
   \infer{
     \isprop{P\lor Q}
@@ -158,11 +160,12 @@ rise to two evident judgements \hyp{\istrue{P\lor Q}}{\istrue{P}} and
   }
 \end{gather*}
 
-Finally, we must define the circumstances under which $P\supset Q$ is a
-proposition (i.e.\ when \isprop{P\supset Q} is evident). And we intend this to
-be under the circumstances that $P$ is a proposition, and also that $Q$ is a
-proposition assuming that $P$ is true. In other words, \hyp{\isprop{P\supset
-Q}}{\isprop{P}, \hyp{\isprop{Q}}{\istrue{P}}}, or
+Finally, we must define the circumstances under which $P\supset Q$ is
+a proposition (i.e.\ when $\isprop{P\supset Q}$ is evident). And we
+intend this to be under the circumstances that $P$ is a proposition,
+and also that $Q$ is a proposition assuming that $P$ is true. In other
+words, $\hyp{\isprop{P\supset Q}}{\isprop{P},
+\hyp{\isprop{Q}}{\istrue{P}}}$, or
 \[
   \infer{
     \isprop{P\supset Q}
@@ -177,23 +180,22 @@ previous ones. But by unfolding the meaning explanations for hypothetical
 judgement, proposition-hood and truth of a proposition, we arrive at the
 following explanation:
 \begin{quote}
-  To know \hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\istrue{P}}} is
+  To know $\hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\istrue{P}}}$ is
   to know what counts as a direct verification of $P\supset Q$ when one knows what
   counts as a direct verification of $P$, and, when one has such a verification, what
   counts as a direct verification of $Q$.
 \end{quote}
 
-(Note that unless \istrue{P}, it need not be evident that \isprop{Q}.) If
+(Note that unless $\istrue{P}$, it need not be evident that \isprop{Q}.) If
 this judgement is going to be made evident, then we must indeed come up with
 what should count as a direct verification of $P\supset Q$ under the
 assumptions described above.
 
-And so to have a direct verification of $P\supset Q$ is to have a verification
-of $Q$ assuming that one has one of $P$; this is the meaning of implication,
-and it validates the judgement \hyp{\istrue{P\supset
-Q}}{\hyp{\istrue{Q}}{\istrue{P}}} , and may be written as an inference rule as
-follows:
-%
+And so to have a direct verification of $P\supset Q$ is to have a
+verification of $Q$ assuming that one has one of $P$; this is the
+meaning of implication, and it validates the judgement
+$\hyp{\istrue{P\supset Q}}{\hyp{\istrue{Q}}{\istrue{P}}}$, and may be
+written as an inference rule as follows:
 \[
   \infer{
     \istrue{P\supset Q}
@@ -207,7 +209,7 @@ follows:
 So far, we have given judgements which define what it means to be a
 proposition, and thence for each proposition, we have by definition a notion of
 what should count as a verification of that proposition. And by definition, to
-assert the judgement \istrue{P} is to assert that one has a verification of
+assert the judgement $\istrue{P}$ is to assert that one has a verification of
 $P$, but we have not considered any judgements which actually deal with such
 verifications directly.
 
@@ -242,47 +244,48 @@ notion of reduction to canonical form, and this corresponds with putting into
 action a plan of verification in order to get an actual verification.
 
 \begin{quote}
-  To know \reduce{M}{M'} is to know that $M$ is an expression which reduces to
+  To know $\reduce{M}{M'}$ is to know that $M$ is an expression which reduces to
   a canonical form $M'$.
 \end{quote}
 
 Now, we can correct the previous meaning explanation as follows:
 
 \begin{quote}
-  To know \ver{M}{P} is to know an $M'$ such that \reduce{M}{M'} and $M'$ is a
+  To know $\ver{M}{P}$ is to know an $M'$ such that $\reduce{M}{M'}$ and $M'$ is a
   canonical (direct) verification of $P$.
 \end{quote}
 
-The meaning explanation for \isprop{P} must be accordingly modified to take
+The meaning explanation for $\isprop{P}$ must be accordingly modified to take
 into account the computational behavior of the expression domain:
 
 \begin{quote}
-  To know \isprop{P} is to know a $P'$ such that \reduce{P}{P'} and $P'$ is a
+  To know $\isprop{P}$ is to know a $P'$ such that $\reduce{P}{P'}$ and $P'$ is a
   canonical proposition, which is to say, that one knows what counts as a
   canonical verification for $P'$.
 \end{quote}
 
 In practice, when it is clear that $P$ is canonical, then we will simply say,
-``To know \isprop{P} is to know what counts as a canonical verification of
+``To know $\isprop{P}$ is to know what counts as a canonical verification of
 $P$''.
 
 As an example, then, we will update the evidence of the assertion
-\hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}}. The meaning
+$\hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}}$. The meaning
 of this, expanded into spoken language, is as follows:
 \begin{quote}
-  To know \hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}} is
+  To know $\hyp{\isprop{P\supset Q}}{\isprop{P},\hyp{\isprop{Q}}{\isprop{P}}}$ is
   to know what counts as a canonical verification of $P\supset Q$ under
-  the circumstances that \reduce{P}{P'}, such one knows what counts as a
+  the circumstances that $\reduce{P}{P'}$, such one knows what counts as a
   canonical verification $P'$, and, if one has such a verification,
-  \reduce{Q}{Q'} such that one knows what counts as a canonical verification of
+  $\reduce{Q}{Q'}$ such that one knows what counts as a canonical verification of
   $Q'$.
 \end{quote}
 
 And this is evident, since we will say that a canonical verification of
 $P\supset Q$ is an expression $\lambda x. E$ such that we know the
-hypothetico-general judgement \genj{x}{\hyp{\ver{E}{Q}}{\ver{x}{P}}}. This
-validates the assertion \hyp{\ver{\lambda x.E}{P\supset
-Q}}{\hyp{\ver{E}{Q}}{\ver{x}{P}}}, written as an inference rule:
+hypothetico-general judgement $\genj{x}{\hyp{\ver{E}{Q}}{\ver{x}{P}}}$. This
+validates the assertion $\hyp{\ver{\lambda x.E}{P\supset
+Q}}{\hyp{\ver{E}{Q}}{\ver{x}{P}}}$, written as an inference rule:
+
 %
 \[
   \infer{
@@ -295,8 +298,8 @@ Q}}{\hyp{\ver{E}{Q}}{\ver{x}{P}}}, written as an inference rule:
 By the addition of this judgement, we have graduated from a logical theory to a
 type theory, in the sense of \emph{Constructive Mathematics and Computer
 Programming} (Martin-L\"of, 1979). In fact, we may dispense with the original
-\istrue{P} form of judgement by \emph{defining} it in terms of the new
-\ver{M}{P} judgement as follows:
+$\istrue{P}$ form of judgement by \emph{defining} it in terms of the new
+$\ver{M}{P} $judgement as follows:
 \[
   \infer{
     \istrue{P}
