--- a/ctt.tex
+++ b/ctt.tex
@@ -30,8 +30,9 @@ first form of judgement is \framebox{\isset{A}}, and its meaning
 explanation is as follows:
 
 \begin{quote}
-  To know $\isset{A}$ is to know what counts as a canonical verification of $A$
-  and when two such verifications are equal.
+  To know $\isset{A}$ is to know an $A'$ such that $\reduce{A}{A'}$,
+  and you know what counts as a canonical verification of $A'$ and when
+  two such verifications are equal.
 \end{quote}
 
 The next form of judgement is \framebox{\ver{M}{A}}, which remains
@@ -42,11 +43,26 @@ the same as before:
   $\reduce{M}{M'}$ and $M'$ is a canonical verification of $A$.
 \end{quote}
 
-We'll need to add new judgements for equality (equality of types, and
-equality of verifications). For equality of types
-\framebox{$\isset{A=B}$}, there are a number of possible meaning
-explanations, but we'll use the one that Martin-L\"of used starting in
-1979:
+We'll need to add new judgements for equality (equality of
+verifications, and equality of types respectively). First, equality of
+verifications is written \framebox{$\ver{M=N}{A}$}, and means the
+following:
+
+\begin{quote}
+  To know $\ver{M=N}{A}$ (presupposing $\ver{M}{A}$ and $\ver{N}{A}$,
+  and thence $\isset{A}$) is to know that the values of $M$ and $N$ are
+  equal as canonical verifications of $A$.
+\end{quote}
+
+The fact that $M$ and $N$ reduce to canonical values which verify $A$
+is known from the presuppositions of the judgement; and what it means
+for them to be equal as such is known from the evidence of the
+presupposition $\isset{A}$ which is obtained from the other
+presuppositions.
+
+For equality of types \framebox{$\isset{A=B}$}, there are a number of
+possible meaning explanations, but we'll use the one that Martin-L\"of
+used starting in 1979:
 
 \begin{quote}
   To know $\isset{A=B}$ (presupposing $\isset{A}$ and $\isset{B}$) is to know
