--- a/ctt.tex
+++ b/ctt.tex
@@ -116,7 +116,7 @@ $\Gamma$''). Their meaning explanations are as follows:
 
 \begin{quote}
   To know $\isctx\Gamma$\ is to know that $\reduce{\Gamma}{\cdot}$, or it is to know
-  a variable $x$ and an expression $A$ such that $\reduce{\Gamma}{\Delta, \ver{x}{A}}$
+  a variable $x$ and expressions $\Delta,A$ such that $\reduce{\Gamma}{\Delta, \ver{x}{A}}$
   and $\sequent{\Delta}{\isset{A}}$, and $\fresh{x}{\Delta}$.
 \end{quote}
 
